// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshot > should z.array() match snapshot 1`] = `
{
  "_zod": {
    "def": {
      "element": {
        "_zod": {
          "def": {
            "type": "string",
          },
        },
        "def": {
          "type": "string",
        },
        "~standard": {
          "jsonSchema": {
            "input": [Function],
            "output": [Function],
          },
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
      "type": "array",
    },
  },
  "def": {
    "element": {
      "_zod": {
        "def": {
          "type": "string",
        },
      },
      "def": {
        "type": "string",
      },
      "~standard": {
        "jsonSchema": {
          "input": [Function],
          "output": [Function],
        },
        "validate": [Function],
        "vendor": "zod",
        "version": 1,
      },
    },
    "type": "array",
  },
  "~standard": {
    "jsonSchema": {
      "input": [Function],
      "output": [Function],
    },
    "validate": [Function],
    "vendor": "zod",
    "version": 1,
  },
}
`;

exports[`snapshot > should z.array() match snapshot 2`] = `
{
  "_zod": {
    "def": {
      "element": {
        "_zod": {
          "def": {
            "type": "string",
          },
        },
        "def": {
          "type": "string",
        },
        "~standard": {
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
      "type": "array",
    },
  },
  "def": {
    "element": {
      "_zod": {
        "def": {
          "type": "string",
        },
      },
      "def": {
        "type": "string",
      },
      "~standard": {
        "validate": [Function],
        "vendor": "zod",
        "version": 1,
      },
    },
    "type": "array",
  },
  "~standard": {
    "validate": [Function],
    "vendor": "zod",
    "version": 1,
  },
}
`;

exports[`snapshot > should z.enum() match snapshot 1`] = `
{
  "_zod": {
    "def": {
      "entries": {
        "bar": "bar",
        "baz": "baz",
        "foo": "foo",
      },
      "type": "enum",
    },
  },
  "def": {
    "entries": {
      "bar": "bar",
      "baz": "baz",
      "foo": "foo",
    },
    "type": "enum",
  },
  "~standard": {
    "jsonSchema": {
      "input": [Function],
      "output": [Function],
    },
    "validate": [Function],
    "vendor": "zod",
    "version": 1,
  },
}
`;

exports[`snapshot > should z.enum() match snapshot 2`] = `
{
  "_zod": {
    "def": {
      "entries": {
        "bar": "bar",
        "baz": "baz",
        "foo": "foo",
      },
      "type": "enum",
    },
  },
  "def": {
    "entries": {
      "bar": "bar",
      "baz": "baz",
      "foo": "foo",
    },
    "type": "enum",
  },
  "~standard": {
    "validate": [Function],
    "vendor": "zod",
    "version": 1,
  },
}
`;

exports[`snapshot > should z.function() match snapshot 1`] = `
{
  "_zod": {
    "def": {
      "input": {
        "_zod": {
          "def": {
            "items": [
              {
                "_zod": {
                  "def": {
                    "type": "string",
                  },
                },
                "def": {
                  "type": "string",
                },
                "~standard": {
                  "jsonSchema": {
                    "input": [Function],
                    "output": [Function],
                  },
                  "validate": [Function],
                  "vendor": "zod",
                  "version": 1,
                },
              },
            ],
            "rest": null,
            "type": "tuple",
          },
        },
        "def": {
          "items": [
            {
              "_zod": {
                "def": {
                  "type": "string",
                },
              },
              "def": {
                "type": "string",
              },
              "~standard": {
                "jsonSchema": {
                  "input": [Function],
                  "output": [Function],
                },
                "validate": [Function],
                "vendor": "zod",
                "version": 1,
              },
            },
          ],
          "rest": null,
          "type": "tuple",
        },
        "~standard": {
          "jsonSchema": {
            "input": [Function],
            "output": [Function],
          },
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
      "output": {
        "_zod": {
          "def": {
            "checks": [],
            "type": "number",
          },
        },
        "def": {
          "checks": [],
          "type": "number",
        },
        "~standard": {
          "jsonSchema": {
            "input": [Function],
            "output": [Function],
          },
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
      "type": "function",
    },
  },
  "def": {
    "input": {
      "_zod": {
        "def": {
          "items": [
            {
              "_zod": {
                "def": {
                  "type": "string",
                },
              },
              "def": {
                "type": "string",
              },
              "~standard": {
                "jsonSchema": {
                  "input": [Function],
                  "output": [Function],
                },
                "validate": [Function],
                "vendor": "zod",
                "version": 1,
              },
            },
          ],
          "rest": null,
          "type": "tuple",
        },
      },
      "def": {
        "items": [
          {
            "_zod": {
              "def": {
                "type": "string",
              },
            },
            "def": {
              "type": "string",
            },
            "~standard": {
              "jsonSchema": {
                "input": [Function],
                "output": [Function],
              },
              "validate": [Function],
              "vendor": "zod",
              "version": 1,
            },
          },
        ],
        "rest": null,
        "type": "tuple",
      },
      "~standard": {
        "jsonSchema": {
          "input": [Function],
          "output": [Function],
        },
        "validate": [Function],
        "vendor": "zod",
        "version": 1,
      },
    },
    "output": {
      "_zod": {
        "def": {
          "checks": [],
          "type": "number",
        },
      },
      "def": {
        "checks": [],
        "type": "number",
      },
      "~standard": {
        "jsonSchema": {
          "input": [Function],
          "output": [Function],
        },
        "validate": [Function],
        "vendor": "zod",
        "version": 1,
      },
    },
    "type": "function",
  },
  "~standard": {
    "jsonSchema": {
      "input": [Function],
      "output": [Function],
    },
    "validate": [Function],
    "vendor": "zod",
    "version": 1,
  },
}
`;

exports[`snapshot > should z.function() match snapshot 2`] = `
{
  "_zod": {
    "def": {
      "input": {
        "_zod": {
          "def": {
            "items": [
              {
                "_zod": {
                  "def": {
                    "type": "string",
                  },
                },
                "def": {
                  "type": "string",
                },
                "~standard": {
                  "jsonSchema": {
                    "input": [Function],
                    "output": [Function],
                  },
                  "validate": [Function],
                  "vendor": "zod",
                  "version": 1,
                },
              },
            ],
            "rest": null,
            "type": "tuple",
          },
        },
        "def": {
          "items": [
            {
              "_zod": {
                "def": {
                  "type": "string",
                },
              },
              "def": {
                "type": "string",
              },
              "~standard": {
                "jsonSchema": {
                  "input": [Function],
                  "output": [Function],
                },
                "validate": [Function],
                "vendor": "zod",
                "version": 1,
              },
            },
          ],
          "rest": null,
          "type": "tuple",
        },
        "~standard": {
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
      "output": {
        "_zod": {
          "def": {
            "checks": [],
            "type": "number",
          },
        },
        "def": {
          "checks": [],
          "type": "number",
        },
        "~standard": {
          "jsonSchema": {
            "input": [Function],
            "output": [Function],
          },
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
      "type": "function",
    },
  },
  "def": {
    "input": {
      "_zod": {
        "def": {
          "items": [
            {
              "_zod": {
                "def": {
                  "type": "string",
                },
              },
              "def": {
                "type": "string",
              },
              "~standard": {
                "jsonSchema": {
                  "input": [Function],
                  "output": [Function],
                },
                "validate": [Function],
                "vendor": "zod",
                "version": 1,
              },
            },
          ],
          "rest": null,
          "type": "tuple",
        },
      },
      "def": {
        "items": [
          {
            "_zod": {
              "def": {
                "type": "string",
              },
            },
            "def": {
              "type": "string",
            },
            "~standard": {
              "jsonSchema": {
                "input": [Function],
                "output": [Function],
              },
              "validate": [Function],
              "vendor": "zod",
              "version": 1,
            },
          },
        ],
        "rest": null,
        "type": "tuple",
      },
      "~standard": {
        "validate": [Function],
        "vendor": "zod",
        "version": 1,
      },
    },
    "output": {
      "_zod": {
        "def": {
          "checks": [],
          "type": "number",
        },
      },
      "def": {
        "checks": [],
        "type": "number",
      },
      "~standard": {
        "jsonSchema": {
          "input": [Function],
          "output": [Function],
        },
        "validate": [Function],
        "vendor": "zod",
        "version": 1,
      },
    },
    "type": "function",
  },
  "~standard": {
    "validate": [Function],
    "vendor": "zod",
    "version": 1,
  },
}
`;

exports[`snapshot > should z.function() with void input match snapshot 1`] = `
{
  "_zod": {
    "def": {
      "input": {
        "_zod": {
          "def": {
            "element": {
              "_zod": {
                "def": {
                  "type": "unknown",
                },
              },
              "def": {
                "type": "unknown",
              },
              "~standard": {
                "jsonSchema": {
                  "input": [Function],
                  "output": [Function],
                },
                "validate": [Function],
                "vendor": "zod",
                "version": 1,
              },
            },
            "type": "array",
          },
        },
        "def": {
          "element": {
            "_zod": {
              "def": {
                "type": "unknown",
              },
            },
            "def": {
              "type": "unknown",
            },
            "~standard": {
              "jsonSchema": {
                "input": [Function],
                "output": [Function],
              },
              "validate": [Function],
              "vendor": "zod",
              "version": 1,
            },
          },
          "type": "array",
        },
        "~standard": {
          "jsonSchema": {
            "input": [Function],
            "output": [Function],
          },
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
      "output": {
        "_zod": {
          "def": {
            "type": "void",
          },
        },
        "def": {
          "type": "void",
        },
        "~standard": {
          "jsonSchema": {
            "input": [Function],
            "output": [Function],
          },
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
      "type": "function",
    },
  },
  "def": {
    "input": {
      "_zod": {
        "def": {
          "element": {
            "_zod": {
              "def": {
                "type": "unknown",
              },
            },
            "def": {
              "type": "unknown",
            },
            "~standard": {
              "jsonSchema": {
                "input": [Function],
                "output": [Function],
              },
              "validate": [Function],
              "vendor": "zod",
              "version": 1,
            },
          },
          "type": "array",
        },
      },
      "def": {
        "element": {
          "_zod": {
            "def": {
              "type": "unknown",
            },
          },
          "def": {
            "type": "unknown",
          },
          "~standard": {
            "jsonSchema": {
              "input": [Function],
              "output": [Function],
            },
            "validate": [Function],
            "vendor": "zod",
            "version": 1,
          },
        },
        "type": "array",
      },
      "~standard": {
        "jsonSchema": {
          "input": [Function],
          "output": [Function],
        },
        "validate": [Function],
        "vendor": "zod",
        "version": 1,
      },
    },
    "output": {
      "_zod": {
        "def": {
          "type": "void",
        },
      },
      "def": {
        "type": "void",
      },
      "~standard": {
        "jsonSchema": {
          "input": [Function],
          "output": [Function],
        },
        "validate": [Function],
        "vendor": "zod",
        "version": 1,
      },
    },
    "type": "function",
  },
  "~standard": {
    "jsonSchema": {
      "input": [Function],
      "output": [Function],
    },
    "validate": [Function],
    "vendor": "zod",
    "version": 1,
  },
}
`;

exports[`snapshot > should z.function() with void input match snapshot 2`] = `
{
  "_zod": {
    "def": {
      "input": {
        "_zod": {
          "def": {
            "items": [],
            "rest": null,
            "type": "tuple",
          },
        },
        "def": {
          "items": [],
          "rest": null,
          "type": "tuple",
        },
        "~standard": {
          "jsonSchema": {
            "input": [Function],
            "output": [Function],
          },
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
      "output": {
        "_zod": {
          "def": {
            "type": "void",
          },
        },
        "def": {
          "type": "void",
        },
        "~standard": {
          "jsonSchema": {
            "input": [Function],
            "output": [Function],
          },
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
      "type": "function",
    },
  },
  "def": {
    "input": {
      "_zod": {
        "def": {
          "items": [],
          "rest": null,
          "type": "tuple",
        },
      },
      "def": {
        "items": [],
        "rest": null,
        "type": "tuple",
      },
      "~standard": {
        "jsonSchema": {
          "input": [Function],
          "output": [Function],
        },
        "validate": [Function],
        "vendor": "zod",
        "version": 1,
      },
    },
    "output": {
      "_zod": {
        "def": {
          "type": "void",
        },
      },
      "def": {
        "type": "void",
      },
      "~standard": {
        "jsonSchema": {
          "input": [Function],
          "output": [Function],
        },
        "validate": [Function],
        "vendor": "zod",
        "version": 1,
      },
    },
    "type": "function",
  },
  "~standard": {
    "jsonSchema": {
      "input": [Function],
      "output": [Function],
    },
    "validate": [Function],
    "vendor": "zod",
    "version": 1,
  },
}
`;

exports[`snapshot > should z.intersection() match snapshot 1`] = `
{
  "_zod": {
    "def": {
      "left": {
        "_zod": {
          "def": {
            "type": "string",
          },
        },
        "def": {
          "type": "string",
        },
        "~standard": {
          "jsonSchema": {
            "input": [Function],
            "output": [Function],
          },
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
      "right": {
        "_zod": {
          "def": {
            "checks": [],
            "type": "number",
          },
        },
        "def": {
          "checks": [],
          "type": "number",
        },
        "~standard": {
          "jsonSchema": {
            "input": [Function],
            "output": [Function],
          },
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
      "type": "intersection",
    },
  },
  "def": {
    "left": {
      "_zod": {
        "def": {
          "type": "string",
        },
      },
      "def": {
        "type": "string",
      },
      "~standard": {
        "jsonSchema": {
          "input": [Function],
          "output": [Function],
        },
        "validate": [Function],
        "vendor": "zod",
        "version": 1,
      },
    },
    "right": {
      "_zod": {
        "def": {
          "checks": [],
          "type": "number",
        },
      },
      "def": {
        "checks": [],
        "type": "number",
      },
      "~standard": {
        "jsonSchema": {
          "input": [Function],
          "output": [Function],
        },
        "validate": [Function],
        "vendor": "zod",
        "version": 1,
      },
    },
    "type": "intersection",
  },
  "~standard": {
    "jsonSchema": {
      "input": [Function],
      "output": [Function],
    },
    "validate": [Function],
    "vendor": "zod",
    "version": 1,
  },
}
`;

exports[`snapshot > should z.intersection() match snapshot 2`] = `
{
  "_zod": {
    "def": {
      "left": {
        "_zod": {
          "def": {
            "type": "string",
          },
        },
        "def": {
          "type": "string",
        },
        "~standard": {
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
      "right": {
        "_zod": {
          "def": {
            "checks": [],
            "type": "number",
          },
        },
        "def": {
          "checks": [],
          "type": "number",
        },
        "~standard": {
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
      "type": "intersection",
    },
  },
  "def": {
    "left": {
      "_zod": {
        "def": {
          "type": "string",
        },
      },
      "def": {
        "type": "string",
      },
      "~standard": {
        "validate": [Function],
        "vendor": "zod",
        "version": 1,
      },
    },
    "right": {
      "_zod": {
        "def": {
          "checks": [],
          "type": "number",
        },
      },
      "def": {
        "checks": [],
        "type": "number",
      },
      "~standard": {
        "validate": [Function],
        "vendor": "zod",
        "version": 1,
      },
    },
    "type": "intersection",
  },
  "~standard": {
    "validate": [Function],
    "vendor": "zod",
    "version": 1,
  },
}
`;

exports[`snapshot > should z.literal() match snapshot 1`] = `
{
  "_zod": {
    "def": {
      "type": "literal",
      "values": [
        "test",
      ],
    },
  },
  "def": {
    "type": "literal",
    "values": [
      "test",
    ],
  },
  "~standard": {
    "jsonSchema": {
      "input": [Function],
      "output": [Function],
    },
    "validate": [Function],
    "vendor": "zod",
    "version": 1,
  },
}
`;

exports[`snapshot > should z.literal() match snapshot 2`] = `
{
  "_zod": {
    "def": {
      "type": "literal",
      "values": [
        "test",
      ],
    },
  },
  "def": {
    "type": "literal",
    "values": [
      "test",
    ],
  },
  "~standard": {
    "validate": [Function],
    "vendor": "zod",
    "version": 1,
  },
}
`;

exports[`snapshot > should z.object() match snapshot 1`] = `
{
  "_zod": {
    "def": {
      "shape": {
        "bar": {
          "_zod": {
            "def": {
              "innerType": {
                "_zod": {
                  "def": {
                    "checks": [],
                    "type": "number",
                  },
                },
                "def": {
                  "checks": [],
                  "type": "number",
                },
                "~standard": {
                  "jsonSchema": {
                    "input": [Function],
                    "output": [Function],
                  },
                  "validate": [Function],
                  "vendor": "zod",
                  "version": 1,
                },
              },
              "type": "nullable",
            },
          },
          "def": {
            "innerType": {
              "_zod": {
                "def": {
                  "checks": [],
                  "type": "number",
                },
              },
              "def": {
                "checks": [],
                "type": "number",
              },
              "~standard": {
                "jsonSchema": {
                  "input": [Function],
                  "output": [Function],
                },
                "validate": [Function],
                "vendor": "zod",
                "version": 1,
              },
            },
            "type": "nullable",
          },
          "~standard": {
            "jsonSchema": {
              "input": [Function],
              "output": [Function],
            },
            "validate": [Function],
            "vendor": "zod",
            "version": 1,
          },
        },
        "foo": {
          "_zod": {
            "def": {
              "type": "string",
            },
          },
          "def": {
            "type": "string",
          },
          "~standard": {
            "jsonSchema": {
              "input": [Function],
              "output": [Function],
            },
            "validate": [Function],
            "vendor": "zod",
            "version": 1,
          },
        },
      },
      "type": "object",
    },
  },
  "def": {
    "shape": {
      "bar": {
        "_zod": {
          "def": {
            "innerType": {
              "_zod": {
                "def": {
                  "checks": [],
                  "type": "number",
                },
              },
              "def": {
                "checks": [],
                "type": "number",
              },
              "~standard": {
                "jsonSchema": {
                  "input": [Function],
                  "output": [Function],
                },
                "validate": [Function],
                "vendor": "zod",
                "version": 1,
              },
            },
            "type": "nullable",
          },
        },
        "def": {
          "innerType": {
            "_zod": {
              "def": {
                "checks": [],
                "type": "number",
              },
            },
            "def": {
              "checks": [],
              "type": "number",
            },
            "~standard": {
              "jsonSchema": {
                "input": [Function],
                "output": [Function],
              },
              "validate": [Function],
              "vendor": "zod",
              "version": 1,
            },
          },
          "type": "nullable",
        },
        "~standard": {
          "jsonSchema": {
            "input": [Function],
            "output": [Function],
          },
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
      "foo": {
        "_zod": {
          "def": {
            "type": "string",
          },
        },
        "def": {
          "type": "string",
        },
        "~standard": {
          "jsonSchema": {
            "input": [Function],
            "output": [Function],
          },
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
    },
    "type": "object",
  },
  "~standard": {
    "jsonSchema": {
      "input": [Function],
      "output": [Function],
    },
    "validate": [Function],
    "vendor": "zod",
    "version": 1,
  },
}
`;

exports[`snapshot > should z.object() match snapshot 2`] = `
{
  "_zod": {
    "def": {
      "shape": {
        "bar": {
          "_zod": {
            "def": {
              "innerType": {
                "_zod": {
                  "def": {
                    "checks": [],
                    "type": "number",
                  },
                },
                "def": {
                  "checks": [],
                  "type": "number",
                },
                "~standard": {
                  "validate": [Function],
                  "vendor": "zod",
                  "version": 1,
                },
              },
              "type": "nullable",
            },
          },
          "def": {
            "innerType": {
              "_zod": {
                "def": {
                  "checks": [],
                  "type": "number",
                },
              },
              "def": {
                "checks": [],
                "type": "number",
              },
              "~standard": {
                "validate": [Function],
                "vendor": "zod",
                "version": 1,
              },
            },
            "type": "nullable",
          },
          "~standard": {
            "validate": [Function],
            "vendor": "zod",
            "version": 1,
          },
        },
        "foo": {
          "_zod": {
            "def": {
              "type": "string",
            },
          },
          "def": {
            "type": "string",
          },
          "~standard": {
            "validate": [Function],
            "vendor": "zod",
            "version": 1,
          },
        },
      },
      "type": "object",
    },
  },
  "def": {
    "shape": {
      "bar": {
        "_zod": {
          "def": {
            "innerType": {
              "_zod": {
                "def": {
                  "checks": [],
                  "type": "number",
                },
              },
              "def": {
                "checks": [],
                "type": "number",
              },
              "~standard": {
                "validate": [Function],
                "vendor": "zod",
                "version": 1,
              },
            },
            "type": "nullable",
          },
        },
        "def": {
          "innerType": {
            "_zod": {
              "def": {
                "checks": [],
                "type": "number",
              },
            },
            "def": {
              "checks": [],
              "type": "number",
            },
            "~standard": {
              "validate": [Function],
              "vendor": "zod",
              "version": 1,
            },
          },
          "type": "nullable",
        },
        "~standard": {
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
      "foo": {
        "_zod": {
          "def": {
            "type": "string",
          },
        },
        "def": {
          "type": "string",
        },
        "~standard": {
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
    },
    "type": "object",
  },
  "~standard": {
    "validate": [Function],
    "vendor": "zod",
    "version": 1,
  },
}
`;

exports[`snapshot > should z.object() variant match snapshot 1`] = `
{
  "_zod": {
    "def": {
      "catchall": {
        "_zod": {
          "def": {
            "type": "unknown",
          },
        },
        "def": {
          "type": "unknown",
        },
        "~standard": {
          "jsonSchema": {
            "input": [Function],
            "output": [Function],
          },
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
      "shape": {},
      "type": "object",
    },
  },
  "def": {
    "catchall": {
      "_zod": {
        "def": {
          "type": "unknown",
        },
      },
      "def": {
        "type": "unknown",
      },
      "~standard": {
        "jsonSchema": {
          "input": [Function],
          "output": [Function],
        },
        "validate": [Function],
        "vendor": "zod",
        "version": 1,
      },
    },
    "shape": {},
    "type": "object",
  },
  "~standard": {
    "jsonSchema": {
      "input": [Function],
      "output": [Function],
    },
    "validate": [Function],
    "vendor": "zod",
    "version": 1,
  },
}
`;

exports[`snapshot > should z.object() variant match snapshot 2`] = `
{
  "_zod": {
    "def": {
      "catchall": {
        "_zod": {
          "def": {
            "type": "never",
          },
        },
        "def": {
          "type": "never",
        },
        "~standard": {
          "jsonSchema": {
            "input": [Function],
            "output": [Function],
          },
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
      "shape": {},
      "type": "object",
    },
  },
  "def": {
    "catchall": {
      "_zod": {
        "def": {
          "type": "never",
        },
      },
      "def": {
        "type": "never",
      },
      "~standard": {
        "jsonSchema": {
          "input": [Function],
          "output": [Function],
        },
        "validate": [Function],
        "vendor": "zod",
        "version": 1,
      },
    },
    "shape": {},
    "type": "object",
  },
  "~standard": {
    "jsonSchema": {
      "input": [Function],
      "output": [Function],
    },
    "validate": [Function],
    "vendor": "zod",
    "version": 1,
  },
}
`;

exports[`snapshot > should z.promise() match snapshot 1`] = `
{
  "_zod": {
    "def": {
      "innerType": {
        "_zod": {
          "def": {
            "type": "string",
          },
        },
        "def": {
          "type": "string",
        },
        "~standard": {
          "jsonSchema": {
            "input": [Function],
            "output": [Function],
          },
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
      "type": "promise",
    },
  },
  "def": {
    "innerType": {
      "_zod": {
        "def": {
          "type": "string",
        },
      },
      "def": {
        "type": "string",
      },
      "~standard": {
        "jsonSchema": {
          "input": [Function],
          "output": [Function],
        },
        "validate": [Function],
        "vendor": "zod",
        "version": 1,
      },
    },
    "type": "promise",
  },
  "~standard": {
    "jsonSchema": {
      "input": [Function],
      "output": [Function],
    },
    "validate": [Function],
    "vendor": "zod",
    "version": 1,
  },
}
`;

exports[`snapshot > should z.promise() match snapshot 2`] = `
{
  "_zod": {
    "def": {
      "innerType": {
        "_zod": {
          "def": {
            "type": "string",
          },
        },
        "def": {
          "type": "string",
        },
        "~standard": {
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
      "type": "promise",
    },
  },
  "def": {
    "innerType": {
      "_zod": {
        "def": {
          "type": "string",
        },
      },
      "def": {
        "type": "string",
      },
      "~standard": {
        "validate": [Function],
        "vendor": "zod",
        "version": 1,
      },
    },
    "type": "promise",
  },
  "~standard": {
    "validate": [Function],
    "vendor": "zod",
    "version": 1,
  },
}
`;

exports[`snapshot > should z.record() match snapshot 1`] = `
{
  "_zod": {
    "def": {
      "keyType": {
        "_zod": {
          "def": {
            "type": "string",
          },
        },
        "def": {
          "type": "string",
        },
        "~standard": {
          "jsonSchema": {
            "input": [Function],
            "output": [Function],
          },
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
      "type": "record",
      "valueType": {
        "_zod": {
          "def": {
            "checks": [],
            "type": "number",
          },
        },
        "def": {
          "checks": [],
          "type": "number",
        },
        "~standard": {
          "jsonSchema": {
            "input": [Function],
            "output": [Function],
          },
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
    },
  },
  "def": {
    "keyType": {
      "_zod": {
        "def": {
          "type": "string",
        },
      },
      "def": {
        "type": "string",
      },
      "~standard": {
        "jsonSchema": {
          "input": [Function],
          "output": [Function],
        },
        "validate": [Function],
        "vendor": "zod",
        "version": 1,
      },
    },
    "type": "record",
    "valueType": {
      "_zod": {
        "def": {
          "checks": [],
          "type": "number",
        },
      },
      "def": {
        "checks": [],
        "type": "number",
      },
      "~standard": {
        "jsonSchema": {
          "input": [Function],
          "output": [Function],
        },
        "validate": [Function],
        "vendor": "zod",
        "version": 1,
      },
    },
  },
  "~standard": {
    "jsonSchema": {
      "input": [Function],
      "output": [Function],
    },
    "validate": [Function],
    "vendor": "zod",
    "version": 1,
  },
}
`;

exports[`snapshot > should z.record() match snapshot 2`] = `
{
  "_zod": {
    "def": {
      "keyType": {
        "_zod": {
          "def": {
            "type": "string",
          },
        },
        "def": {
          "type": "string",
        },
        "~standard": {
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
      "type": "record",
      "valueType": {
        "_zod": {
          "def": {
            "checks": [],
            "type": "number",
          },
        },
        "def": {
          "checks": [],
          "type": "number",
        },
        "~standard": {
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
    },
  },
  "def": {
    "keyType": {
      "_zod": {
        "def": {
          "type": "string",
        },
      },
      "def": {
        "type": "string",
      },
      "~standard": {
        "validate": [Function],
        "vendor": "zod",
        "version": 1,
      },
    },
    "type": "record",
    "valueType": {
      "_zod": {
        "def": {
          "checks": [],
          "type": "number",
        },
      },
      "def": {
        "checks": [],
        "type": "number",
      },
      "~standard": {
        "validate": [Function],
        "vendor": "zod",
        "version": 1,
      },
    },
  },
  "~standard": {
    "validate": [Function],
    "vendor": "zod",
    "version": 1,
  },
}
`;

exports[`snapshot > should z.string() match snapshot 1`] = `
{
  "_zod": {
    "def": {
      "type": "string",
    },
  },
  "def": {
    "type": "string",
  },
  "~standard": {
    "jsonSchema": {
      "input": [Function],
      "output": [Function],
    },
    "validate": [Function],
    "vendor": "zod",
    "version": 1,
  },
}
`;

exports[`snapshot > should z.string() match snapshot 2`] = `
{
  "_zod": {
    "def": {
      "type": "string",
    },
  },
  "def": {
    "type": "string",
  },
  "~standard": {
    "validate": [Function],
    "vendor": "zod",
    "version": 1,
  },
}
`;

exports[`snapshot > should z.tuple() match snapshot 1`] = `
{
  "_zod": {
    "def": {
      "items": [
        {
          "_zod": {
            "def": {
              "type": "string",
            },
          },
          "def": {
            "type": "string",
          },
          "~standard": {
            "jsonSchema": {
              "input": [Function],
              "output": [Function],
            },
            "validate": [Function],
            "vendor": "zod",
            "version": 1,
          },
        },
        {
          "_zod": {
            "def": {
              "checks": [],
              "type": "number",
            },
          },
          "def": {
            "checks": [],
            "type": "number",
          },
          "~standard": {
            "jsonSchema": {
              "input": [Function],
              "output": [Function],
            },
            "validate": [Function],
            "vendor": "zod",
            "version": 1,
          },
        },
      ],
      "rest": {
        "_zod": {
          "def": {
            "type": "boolean",
          },
        },
        "def": {
          "type": "boolean",
        },
        "~standard": {
          "jsonSchema": {
            "input": [Function],
            "output": [Function],
          },
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
      "type": "tuple",
    },
  },
  "def": {
    "items": [
      {
        "_zod": {
          "def": {
            "type": "string",
          },
        },
        "def": {
          "type": "string",
        },
        "~standard": {
          "jsonSchema": {
            "input": [Function],
            "output": [Function],
          },
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
      {
        "_zod": {
          "def": {
            "checks": [],
            "type": "number",
          },
        },
        "def": {
          "checks": [],
          "type": "number",
        },
        "~standard": {
          "jsonSchema": {
            "input": [Function],
            "output": [Function],
          },
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
    ],
    "rest": {
      "_zod": {
        "def": {
          "type": "boolean",
        },
      },
      "def": {
        "type": "boolean",
      },
      "~standard": {
        "jsonSchema": {
          "input": [Function],
          "output": [Function],
        },
        "validate": [Function],
        "vendor": "zod",
        "version": 1,
      },
    },
    "type": "tuple",
  },
  "~standard": {
    "jsonSchema": {
      "input": [Function],
      "output": [Function],
    },
    "validate": [Function],
    "vendor": "zod",
    "version": 1,
  },
}
`;

exports[`snapshot > should z.tuple() match snapshot 2`] = `
{
  "_zod": {
    "def": {
      "items": [
        {
          "_zod": {
            "def": {
              "type": "string",
            },
          },
          "def": {
            "type": "string",
          },
          "~standard": {
            "validate": [Function],
            "vendor": "zod",
            "version": 1,
          },
        },
        {
          "_zod": {
            "def": {
              "checks": [],
              "type": "number",
            },
          },
          "def": {
            "checks": [],
            "type": "number",
          },
          "~standard": {
            "validate": [Function],
            "vendor": "zod",
            "version": 1,
          },
        },
      ],
      "rest": {
        "_zod": {
          "def": {
            "type": "boolean",
          },
        },
        "def": {
          "type": "boolean",
        },
        "~standard": {
          "jsonSchema": {
            "input": [Function],
            "output": [Function],
          },
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
      "type": "tuple",
    },
  },
  "def": {
    "items": [
      {
        "_zod": {
          "def": {
            "type": "string",
          },
        },
        "def": {
          "type": "string",
        },
        "~standard": {
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
      {
        "_zod": {
          "def": {
            "checks": [],
            "type": "number",
          },
        },
        "def": {
          "checks": [],
          "type": "number",
        },
        "~standard": {
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
    ],
    "rest": {
      "_zod": {
        "def": {
          "type": "boolean",
        },
      },
      "def": {
        "type": "boolean",
      },
      "~standard": {
        "jsonSchema": {
          "input": [Function],
          "output": [Function],
        },
        "validate": [Function],
        "vendor": "zod",
        "version": 1,
      },
    },
    "type": "tuple",
  },
  "~standard": {
    "validate": [Function],
    "vendor": "zod",
    "version": 1,
  },
}
`;

exports[`snapshot > should z.union() match snapshot 1`] = `
{
  "_zod": {
    "def": {
      "options": [
        {
          "_zod": {
            "def": {
              "type": "string",
            },
          },
          "def": {
            "type": "string",
          },
          "~standard": {
            "jsonSchema": {
              "input": [Function],
              "output": [Function],
            },
            "validate": [Function],
            "vendor": "zod",
            "version": 1,
          },
        },
        {
          "_zod": {
            "def": {
              "checks": [],
              "type": "number",
            },
          },
          "def": {
            "checks": [],
            "type": "number",
          },
          "~standard": {
            "jsonSchema": {
              "input": [Function],
              "output": [Function],
            },
            "validate": [Function],
            "vendor": "zod",
            "version": 1,
          },
        },
      ],
      "type": "union",
    },
  },
  "def": {
    "options": [
      {
        "_zod": {
          "def": {
            "type": "string",
          },
        },
        "def": {
          "type": "string",
        },
        "~standard": {
          "jsonSchema": {
            "input": [Function],
            "output": [Function],
          },
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
      {
        "_zod": {
          "def": {
            "checks": [],
            "type": "number",
          },
        },
        "def": {
          "checks": [],
          "type": "number",
        },
        "~standard": {
          "jsonSchema": {
            "input": [Function],
            "output": [Function],
          },
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
    ],
    "type": "union",
  },
  "~standard": {
    "jsonSchema": {
      "input": [Function],
      "output": [Function],
    },
    "validate": [Function],
    "vendor": "zod",
    "version": 1,
  },
}
`;

exports[`snapshot > should z.union() match snapshot 2`] = `
{
  "_zod": {
    "def": {
      "options": [
        {
          "_zod": {
            "def": {
              "type": "string",
            },
          },
          "def": {
            "type": "string",
          },
          "~standard": {
            "validate": [Function],
            "vendor": "zod",
            "version": 1,
          },
        },
        {
          "_zod": {
            "def": {
              "checks": [],
              "type": "number",
            },
          },
          "def": {
            "checks": [],
            "type": "number",
          },
          "~standard": {
            "validate": [Function],
            "vendor": "zod",
            "version": 1,
          },
        },
      ],
      "type": "union",
    },
  },
  "def": {
    "options": [
      {
        "_zod": {
          "def": {
            "type": "string",
          },
        },
        "def": {
          "type": "string",
        },
        "~standard": {
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
      {
        "_zod": {
          "def": {
            "checks": [],
            "type": "number",
          },
        },
        "def": {
          "checks": [],
          "type": "number",
        },
        "~standard": {
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
    ],
    "type": "union",
  },
  "~standard": {
    "validate": [Function],
    "vendor": "zod",
    "version": 1,
  },
}
`;
